removed photo from employees to save space. Considering placing employees list on a seperate page, will do that tomorrow

--- a/index.html
+++ b/index.html
@@ -23,38 +23,43 @@
                 <div class="bottom-line"></div>
                 <div class="employees-list">
                     <div class="employee">
-                        <img src="./img/garrettboulais.JPG" alt="profile pic" class="employee-picture">
                         <div class="employee-info">
                             <h1 class="employee-name">Garrett Boulais</h1>
-                            <p class="hours-scheduled">35hrs this week</p>
+                            <p class="hours-scheduled">
+                                <span class="hours-scheduled">35</span>hrs this week
+                            </p>
                         </div>
                     </div>
                     <div class="employee">
-                        <img src="./img/garrettboulais.JPG" alt="profile pic" class="employee-picture">
                         <div class="employee-info">
                             <h1 class="employee-name">Samuel Blake</h1>
-                            <p class="hours-scheduled">2hrs this week</p>
+                            <p class="hours-scheduled">
+                                <span class="hours-scheduled">2</span>hrs this week
+                            </p>
                         </div>
                     </div>
                     <div class="employee">
-                        <img src="./img/garrettboulais.JPG" alt="profile pic" class="employee-picture">
                         <div class="employee-info">
                             <h1 class="employee-name">Joey Benrubi</h1>
-                            <p class="hours-scheduled">32hrs this week</p>
+                            <p class="hours-scheduled">
+                                <span class="hours-scheduled">32</span>hrs this week
+                            </p>
                         </div>
                     </div>
                     <div class="employee">
-                        <img src="./img/garrettboulais.JPG" alt="profile pic" class="employee-picture">
                         <div class="employee-info">
                             <h1 class="employee-name">Aren Johnson</h1>
-                            <p class="hours-scheduled">24hrs this week</p>
+                            <p class="hours-scheduled">
+                                <span class="hours-scheduled">24</span>hrs this week
+                            </p>
                         </div>
                     </div>
                     <div class="employee">
-                        <img src="./img/garrettboulais.JPG" alt="profile pic" class="employee-picture">
                         <div class="employee-info">
                             <h1 class="employee-name">Manav vats</h1>
-                            <p class="hours-scheduled">5hrs this week</p>
+                            <p class="hours-scheduled">
+                                <span class="hours-scheduled">6</span>hrs this week
+                            </p>
                         </div>
                     </div>
                 </div> <!-- end employees list -->
